# pass

./: .env.example  .gitignore  GIT_WORKFLOW.md  README.md  TECH.md  blast_radius.md  pyproject.toml  risk_acceptance.yml
.github/workflows/: release.yml
assets/: grafana-dashboard.json
assets/regulatory/: README.md
docker/: .wafpass-export.yml  docker-compose.yml  prometheus.yml
docker/grafana-provisioning/dashboards/: dashboard.yml
docker/grafana-provisioning/datasources/: prometheus.yml
hooks/: install.ps1  install.sh  pre-commit
scripts/: pack_controls.py
serve/: README.md  __init__.py  app.py  last_results.json
serve/templates/: index.html
tests/: test_cdk_plugin.py  test_cross_iac_controls.py  test_cross_iac_fixer.py  test_engine.py  test_fixer.py  test_loader.py  test_pulumi_plugin.py  test_secret_scanner.py
tests/fixtures/cdk_ts/: compliant.ts  non_compliant.ts
tests/fixtures/compliant/: main.tf
tests/fixtures/controls/: cross_iac_dynamodb_pitr.yml  cross_iac_lambda_environment.yml  cross_iac_s3_versioning.yml
tests/fixtures/fix_compliant_expected/: main.tf
tests/fixtures/fix_non_compliant/: main.tf
tests/fixtures/non_compliant/: main.tf
tests/fixtures/pulumi_py/: compliant.py  non_compliant.py
wafpass/: __init__.py  __main__.py  auth.py  baseline.py  blast_radius.py  blast_renderer.py  carbon.py  cli.py  control_schema.py  engine.py  fixer.py  loader.py  models.py  parser.py  pdf_reporter.py  plan_parser.py  reporter.py  runner.py  schema.py  secret_scanner.py  state.py  waivers.py  wizard.py
wafpass/export/: __init__.py  base.py  config.py  registry.py
wafpass/export/plugins/: __init__.py  datadog.py  grafana.py  prometheus.py  slack.py  splunk.py  webhook.py
wafpass/fix_providers/: __init__.py  cdk_aws.py  pulumi_aws.py  terraform_alicloud.py  terraform_aws.py  terraform_azure.py  terraform_core.py  terraform_digitalocean.py  terraform_gcp.py  terraform_hcloud.py  terraform_oci.py  terraform_openstack.py  terraform_ovh.py  terraform_scaleway.py  terraform_stackit.py  terraform_yandex.py
wafpass/iac/: __init__.py  base.py  registry.py
wafpass/iac/plugins/: __init__.py  bicep.py  cdk.py  pulumi.py  terraform.py
